# LearnDRF

./: .env  .gitignore  courses.json  data.json  docker-compose.yaml  dump.rdb  pyproject.toml  readme.md  requirements.txt  sample.env  tests_coverage  users.json
config/: settings.py  urls.py
courses/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/fixtures/: payments.json
courses/management/commands/: fill_payments.py
courses/migrations/: 0001_initial.py  0002_lesson_video_url.py  0003_alter_course_options_alter_lesson_options.py  0004_payments.py  0005_rename_payments_payment_alter_lesson_course.py  0006_rename_date_payment_payment_date.py  0007_alter_payment_payment_type_alter_payment_student.py  0008_course_owner_lesson_owner.py  0009_subscription.py  0010_payment_is_paid_payment_payment_reference_and_more.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: create_users.py
users/migrations/: 0001_initial.py
